--- a/component.css
+++ b/component.css
@@ -47,8 +47,8 @@ body {
 .elasticstack li {
   position: absolute;
   z-index: 1;
-  width: 80vw;
-  height: 80vh;
+  width: 90vw;
+  height:100%;
   overflow: hidden;
   opacity: 0;
   cursor: pointer;
