--- a/component.css
+++ b/component.css
@@ -10,7 +10,7 @@ body {
 }
 .container {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,8 +20,8 @@ body {
   position: relative;
   /* margin: 40px auto;*/
   padding: 0;
-  width: 90vw;
-  height: 90vh;
+  width: 100%;
+  height: 100%;
   list-style: none;
   -webkit-perspective: 1000px;
   -webkit-perspective-origin: 50% 150%;
@@ -47,7 +47,7 @@ body {
 .elasticstack li {
   position: absolute;
   z-index: 1;
-  width: 90vw;
+  width: 100%;
   height:100%;
   overflow: hidden;
   opacity: 0;
