--- a/component.css
+++ b/component.css
@@ -6,12 +6,16 @@
   box-sizing: border-box;
 }
 body {
-  background-color: #143f51;
+  background: #3494E6;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #EC6EAD, #3494E6);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #EC6EAD, #3494E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 .container {
   width: 100%;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -20,8 +24,8 @@ body {
   position: relative;
   /* margin: 40px auto;*/
   padding: 0;
-  width: 100%;
-  height: 100%;
+  width: 50vw;
+  height: 50vh;
   list-style: none;
   -webkit-perspective: 1000px;
   -webkit-perspective-origin: 50% 150%;
@@ -48,7 +52,7 @@ body {
   position: absolute;
   z-index: 1;
   width: 100%;
-  height:100%;
+  height: 100%;
   overflow: hidden;
   opacity: 0;
   cursor: pointer;
