--- a/component.css
+++ b/component.css
@@ -9,27 +9,27 @@ body {
   background: #3494E6;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #EC6EAD, #3494E6);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #EC6EAD, #3494E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  font-family: 'Lato', Arial, sans-serif;
-	
-	overflow-x: hidden;
-	overflow-y: scroll;
-
+font-family: 'Lato', Arial, sans-serif;
+  
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 .container {
   width: 100%;
-  height: 100vh;
+  height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .elasticstack {
   position: relative;
   /* margin: 40px auto;*/
   padding: 0;
-  width: 50vw;
-  height: 50vh;
+  width: 50%;
+  height: 50%;
   list-style: none;
   -webkit-perspective: 1000px;
   -webkit-perspective-origin: 50% 150%;
@@ -51,7 +51,6 @@ background: linear-gradient(to right, #EC6EAD, #3494E6); /* W3C, IE 10+/ Edge, F
 .elasticstack li a:hover {
   color: #000;
 }
-
 a{
   color: white;
 }
