--- a/component.css
+++ b/component.css
@@ -1,117 +1,109 @@
 *,
 *:after,
 *::before {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-body {
-  background: #3494E6;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #EC6EAD, #3494E6);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #EC6EAD, #3494E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-font-family: 'Lato', Arial, sans-serif;
-  
-  overflow-x: hidden;
-  overflow-y: scroll;
-}
-.container {
-  width: 100%;
-  height: 80vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
- 
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .elasticstack {
-  position: relative;
-  /* margin: 40px auto;*/
-  padding: 0;
-  width: 80%;
-  height: 80%;
-  list-style: none;
-  -webkit-perspective: 1000px;
-  -webkit-perspective-origin: 50% 150%;
-  perspective: 1000px;
-  perspective-origin: 50% 150%;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	position: relative;
+	margin: 40px auto;
+	padding: 0;
+	width: 340px;
+	height: 380px;
+	list-style: none;
+	-webkit-perspective: 1000px;
+	-webkit-perspective-origin: 50% 150%;
+	perspective: 1000px;
+	perspective-origin: 50% 150%;
 }
 
 .no-js .elasticstack {
-  max-width: 1090px;
-  width: 100%;
-  height: auto;
-  text-align: center;
+	max-width: 1090px;
+	width: 100%;
+	height: auto;
+	text-align: center;
 }
 
-.elasticstack li a:hover {
-  color: #000;
+.elasticstack li a:hover{
+	color: #000;
 }
-a{
-  color: white;
-}
-span
-{
-  color: white;
-}
+
 .elasticstack li {
-  position: absolute;
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  opacity: 0;
-  cursor: pointer;
-  background-color: aliceblue;
-  -webkit-transform: translate3d(0, 0, -180px);
-  transform: translate3d(0, 0, -180px);
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+	position: absolute;
+	z-index: 1;
+	width: 340px;
+	height: 380px;
+	
+	box-shadow: 0 10px 7px -7px rgba(0,0,0,0.12), 0 0 4px rgba(0,0,0,0.1);
+	opacity: 0;
+	cursor: pointer;
+	-webkit-transform: translate3d(0,0,-180px);
+	transform: translate3d(0,0,-180px);
+	-webkit-transform-style: preserve-3d;
+	transform-style: preserve-3d;
 }
 
 .no-js .elasticstack li {
-  background-color: aliceblue;
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
+	position: relative;
+	display: inline-block;
+	opacity: 1;
+	margin: 10px;
+	cursor: default;
+	-webkit-transform: translate3d(0,0,0);
+	transform: translate3d(0,0,0);
 }
 
-.elasticstack li img {
-  display: block;
-  width: 50vw;
-  height: 50vh;
+
+.slide-01
+{
+	width: 340px;
+	height: 400px;
+	background:url('one.jpg')no-repeat;
+	background-size: cover;
+	background-position: center;
+
 }
+.slide-02
+{
+	width: 340px;
+	height: 400px;
+	background:url('seven.jpg')no-repeat;
+	background-size: cover;
+	background-position: center;
+
+}
+.slide-03
+{
+	width: 340px;
+	height: 400px;
+	background:url('five.jpg')no-repeat;
+	background-size: cover;
+	background-position: center;
+
+}
+
+
 
 .elasticstack li h5 {
-  margin: 0 5px;
-  color: #143f51;
-
-  text-align: right;
-  font-size: 1.4em;
-  font-family: "Sacramento", cursive;
-  line-height: 60px;
+	margin: 0 5px;
+	color: #143f51;
+	height: 60px;
+	text-align: right;
+	font-size: 1.4em;
+	font-family: "Sacramento", cursive;
+	line-height: 60px;
 }
 
 .elasticstack li.animate {
-  -webkit-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
+	-webkit-transition: all 0.3s ease-out;
+	transition: all 0.3s ease-out;
 }
 
 .elasticstack li.move-back {
-  /* http://matthewlein.com/ceaser/ */
-  -webkit-transition-timing-function: cubic-bezier(
-    0.175,
-    0.885,
-    0.47,
-    1
-  ); /* older webkit */
-  -webkit-transition-timing-function: cubic-bezier(0.175, 0.885, 0.47, 1.515);
-  transition-timing-function: cubic-bezier(0.175, 0.885, 0.47, 1.515);
+	/* http://matthewlein.com/ceaser/ */
+	-webkit-transition-timing-function: cubic-bezier(0.175, 0.885, 0.470, 1); /* older webkit */
+	-webkit-transition-timing-function: cubic-bezier(0.175, 0.885, 0.470, 1.515);
+	transition-timing-function: cubic-bezier(0.175, 0.885, 0.470, 1.515);
 }
