--- a/component.css
+++ b/component.css
@@ -6,6 +6,14 @@
     box-sizing: border-box;
 }
 
+body
+{
+	background: #B993D6;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #8CA6DB, #B993D6);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #8CA6DB, #B993D6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
 .elasticstack {
 	position: relative;
 	margin: 40px auto;
