--- a/component.css
+++ b/component.css
@@ -26,7 +26,35 @@ background: linear-gradient(to right, #8CA6DB, #B993D6); /* W3C, IE 10+/ Edge, F
 .clearfix:after {
 	clear: both;
 }
+.container > header {
+	margin: 0 auto;
+	padding: 2em;
+	text-align: center;
+	background: rgba(0,0,0,0.01);
+}
 
+.container > header h1 {
+	font-size: 2.625em;
+	line-height: 1.3;
+	margin: 0;
+	font-weight: 300;
+}
+
+.container > header span {
+	display: block;
+	font-size: 63%;
+	font-weight: 400;
+	color: rgba(0,0,0,0.4);
+	padding: 0.2em 0 0.6em 0.1em;
+}
+
+.container > header span a {
+	color: #fff;
+}
+
+.container > header span a:hover {
+	opacity: 0.7;
+}
 
 .elasticstack {
 	position: relative;
